--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -3,6 +3,7 @@
 ============= */
 #section-4 {
 
+
     h1 {
         font-family: "Amaranth", Helvetica, sans-serif;
         font-weight: bold;
@@ -10,31 +11,49 @@
         color: $white;
         text-align: center;
         background-color: $darkblue;
-        margin-bottom: 20px;
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-bottom: 40px;
     }
 
-    h2 {
-        font-family: "Amaranth", Helvetica, sans-serif;
-        font-weight: bold;
-        font-size: 27px;
-        color: #fff;
-        text-align: center;
+    div {
+        padding-left: 148px;
+        padding-right: 148px;
+
+        h2 {
+            font-family: "Amaranth", Helvetica, sans-serif;
+            font-weight: bold;
+            font-size: 27px;
+            color: #fff;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+    
+        p {
+            font-family: "Titillium Web", Arial, sans-serif;
+            font-weight: thin;
+            font-size: 16px;
+            color: #fff;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+    
+        button {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+            border-radius: 4px;
+            margin-bottom: 20px;
+            margin-top: 30px;
+            font-family: "Amaranth", Helvetica, sans-serif;
+            font-weight: normal;
+            font-size: 12px;
+            color: $darkblue;
+            text-align: center;
+        }
     }
 
-    p {
-        font-family: "Titillium Web", Arial, sans-serif;
-        font-weight: thin;
-        font-size: 16px;
-        color: #fff;
-        text-align: center;
-    }
-
-    button {
-        float: center;
-
-    }
 
     ul {
         li {
