--- a/dev/scss/sections/_section-5.scss
+++ b/dev/scss/sections/_section-5.scss
@@ -3,8 +3,6 @@
 ============= */
 #section-5 {
 
-    padding: 10px;
-
     h2 {
         font-family: "Amaranth", Helvetica, sans-serif;
         font-weight: bold;
